--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="?android:attr/actionBarSize"
-    android:background="@drawable/homepage"
+    android:background="@drawable/landing_fresh"
     android:fillViewport="true"
     tools:context="com.intrinsic.cid.intrinsic.LandingPage">
 
