--- a/app/src/main/res/layout/content_contact.xml
+++ b/app/src/main/res/layout/content_contact.xml
@@ -61,10 +61,11 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/website"
-            android:alpha="0.75"
-            android:text="Our address: 5 Sussex Ave, Newark, NJ, 07103"
-            android:textSize="13sp"
             android:layout_marginBottom="20dp"
+            android:alpha="0.75"
+            android:onClick="googlemaps"
+            android:text="Directions: 5 Sussex Ave, Newark, NJ, 07103"
+            android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
